--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "gulp-sass": "^3.1.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "gulp watch"
   },
   "author": "",
   "license": "MIT"
